# cupix

./: .gitignore  CMakeLists.txt  README.md  cupix.cu  cupix.hpp  main.cpp
font/: bitmap_font.data
model/: statistic.txt
model/other/mtl/: al.mtl  ancient_door.mtl  bunny.mtl  desk.mtl  dolphins.mtl  f-16.mtl  flowers.mtl  mario.mtl  porsche.mtl  rose+vase.mtl  soccerball.mtl  suzanne_high.mtl  suzanne_high_smooth.mtl  teapot.mtl
src/: cupix.cu  cupix.hpp  main.cpp  temp.cpp
src/core/: CUPix.cu  CUPix.hpp  CUPixCore.cu  CUPixKernel.cu  FragmentShader.cu  Shadertoy.cu  VertexShader.cu  cupix.cu  cupix.hpp  cupix_kernel.cu  cupix_kernel.cuh  fragment_shader.cu  shader.cu  shadertoy.cu  vertex_shader.cu
src/cupix/: cupix.cpp
src/cupix_gl/: OGL.cpp  OGL.hpp  cupix_gl.cpp
src/cupix_gl/shader/: fragment.glsl  vertex.glsl
src/util/: Camera.cpp  Camera.hpp  FPS.cpp  FPS.hpp  Video.cpp  camera.cpp  camera.hpp  fps.hpp  model.hpp  raw2mp4.sh  texture.hpp  toggle.hpp  video.hpp
src/utility/: Camera.cpp  Camera.hpp  FPS.cpp  FPS.hpp  Model.cpp  Model.hpp  Texture.cpp  Toggle.hpp
util/: camera.cpp  camera.hpp  control.cpp  control.hpp  obj.cpp  objloader.cpp
